paranthembuild/y.output
语法

    0 $accept: line_list $end

    1 line_list: line
    2          | line_list line

    3 line: expression CR

    4 expression: term
    5           | expression ADD term
    6           | expression SUB term

    7 term: primary_expression
    8     | term MUL primary_expression
    9     | term DIV primary_expression

   10 primary_expression: DOUBLE_LITERAL
   11                   | LP expression RP


Terminals, with rules where they appear

$end (0) 0
error (256)
DOUBLE_LITERAL (258) 10
ADD (259) 5
SUB (260) 6
MUL (261) 8
DIV (262) 9
CR (263) 3
LP (264) 11
RP (265) 11


Nonterminals, with rules where they appear

$accept (11)
    左： 0
line_list (12)
    左： 1 2, 右： 0 2
line (13)
    左： 3, 右： 1 2
expression (14)
    左： 4 5 6, 右： 3 5 6 11
term (15)
    左： 7 8 9, 右： 4 5 6 8 9
primary_expression (16)
    左： 10 11, 右： 7 8 9


State 0

    0 $accept: . line_list $end

    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    line_list           转到状态 3
    line                转到状态 4
    expression          转到状态 5
    term                转到状态 6
    primary_expression  转到状态 7


State 1

   10 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 10 (primary_expression)


State 2

   11 primary_expression: LP . expression RP

    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    expression          转到状态 8
    term                转到状态 6
    primary_expression  转到状态 7


State 3

    0 $accept: line_list . $end
    2 line_list: line_list . line

    $end            shift, and go to state 9
    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    line                转到状态 10
    expression          转到状态 5
    term                转到状态 6
    primary_expression  转到状态 7


State 4

    1 line_list: line .

    $default  reduce using rule 1 (line_list)


State 5

    3 line: expression . CR
    5 expression: expression . ADD term
    6           | expression . SUB term

    ADD  shift, and go to state 11
    SUB  shift, and go to state 12
    CR   shift, and go to state 13


State 6

    4 expression: term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 4 (expression)


State 7

    7 term: primary_expression .

    $default  reduce using rule 7 (term)


State 8

    5 expression: expression . ADD term
    6           | expression . SUB term
   11 primary_expression: LP expression . RP

    ADD  shift, and go to state 11
    SUB  shift, and go to state 12
    RP   shift, and go to state 16


State 9

    0 $accept: line_list $end .

    $default  接受


State 10

    2 line_list: line_list line .

    $default  reduce using rule 2 (line_list)


State 11

    5 expression: expression ADD . term

    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    term                转到状态 17
    primary_expression  转到状态 7


State 12

    6 expression: expression SUB . term

    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    term                转到状态 18
    primary_expression  转到状态 7


State 13

    3 line: expression CR .

    $default  reduce using rule 3 (line)


State 14

    8 term: term MUL . primary_expression

    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    primary_expression  转到状态 19


State 15

    9 term: term DIV . primary_expression

    DOUBLE_LITERAL  shift, and go to state 1
    LP              shift, and go to state 2

    primary_expression  转到状态 20


State 16

   11 primary_expression: LP expression RP .

    $default  reduce using rule 11 (primary_expression)


State 17

    5 expression: expression ADD term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 5 (expression)


State 18

    6 expression: expression SUB term .
    8 term: term . MUL primary_expression
    9     | term . DIV primary_expression

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 6 (expression)


State 19

    8 term: term MUL primary_expression .

    $default  reduce using rule 8 (term)


State 20

    9 term: term DIV primary_expression .

    $default  reduce using rule 9 (term)
